<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:padding="16dp"
    android:minWidth="300dp"
    android:minHeight="300dp">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:id="@+id/fragment_dialog_change_password_textInputLayout_oldPassword"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="162dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:id="@+id/fragment_dialog_change_password_textInputEdt_oldPassword"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:counterEnabled="true"
        android:id="@+id/fragment_dialog_change_password_textInputLayout_newPassword"
        android:layout_below="@+id/fragment_dialog_change_password_textInputLayout_oldPassword">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:id="@+id/fragment_dialog_change_password_textInputEdt_newPassword"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:id="@+id/fragment_dialog_change_password_textInputLayout_confirm_newPassword"
        android:layout_below="@+id/fragment_dialog_change_password_textInputLayout_newPassword">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/login_confirmPassword_hint"
            android:inputType="textPassword"
            android:padding="5dp"
            android:id="@+id/fragment_dialog_change_password_textInputEdt_confirm_newPassword"/>

    </android.support.design.widget.TextInputLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_below="@id/fragment_dialog_change_password_textInputLayout_confirm_newPassword"
    android:gravity="center"
    android:layout_marginTop="8dp">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_dialog_change_password_button_done"
        android:text="@string/button_done"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_dialog_change_password_button_cancel"
        android:text="@string/button_cancel"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite" />

</LinearLayout>

</RelativeLayout>