<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        tools:context=".login.LoginActivity">

        <ImageView
            android:id="@+id/activity_login_imageView_tobago_icon"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/tobago_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/activity_login_imageView_tobago_icon"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingEnd="24dp"
            android:paddingStart="24dp">

            <EditText
                android:id="@+id/activity_login_editText_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_view_40dp"
                android:background="@drawable/round_border_white"
                android:hint="@string/hint_login"
                android:inputType="phone"
                android:padding="5dp"
                android:textColor="#000" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_login_editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_height_view_40dp"
                    android:background="@drawable/round_border_white"
                    android:hint="@string/pas"
                    android:inputType="textPassword"
                    android:paddingEnd="4dp"
                    android:paddingStart="4dp" />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/activity_login_textView_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/login_forgot_password"
                android:textColor="#fff"
                android:textStyle="italic" />

            <Button
                android:id="@+id/activity_login_button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_border_stroke_primary_dark"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />


            <TextView
                android:id="@+id/activity_login_textView_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/text_register_guide"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="italic" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
